crates/analyzer/tests/snapshots/errors__invalid_ascii.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: String contains invalid byte sequence
  ┌─ [snippet]:3:13
  │
3 │   String<2>("ä")
  │             ^^^


